--- a/cmakeconfig.h.in
+++ b/cmakeconfig.h.in
@@ -9,7 +9,7 @@
 #define PACKAGE "Swiftray"
 
 /* Version number of Wireshark and associated utilities */
-#define VER_PRODUCTVERSION_STR "${VER_PRODUCTVERSION_STR}"
+#define PROJECT_VERSION_STR "${PROJECT_VERSION_STR}"
 #define VERSION_MAJOR ${VERSION_MAJOR}
 #define VERSION_MINOR ${VERSION_MINOR}
 #define VERSION_BUILD ${VERSION_BUILD}
