--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -200,38 +200,6 @@ jobs:
           #sentry-cli upload-dif -o flux3dp -p swiftray Swiftray.app/Contents/MacOS/Swiftray.dSYM
           sentry-cli upload-dif -o flux3dp -p swiftray Swiftray.dSYM
 
-      #- name: Codesign Executable and Frameworks
-      #  if: ${{ matrix.cfg.dist }}
-      #  env: 
-      #    MACOS_CERTIFICATE: ${{ secrets.DEVELOPMENT_CERTIFICATE_DATA }}
-      #    MACOS_CERTIFICATE_PWD: ${{ secrets.DEVELOPMENT_CERTIFICATE_PASSPHRASE }}
-      #    MACOS_KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-      #    #SIGN_IDENTITY_ID: 
-      #  run: |
-      #    echo $MACOS_CERTIFICATE | base64 --decode > certificate.p12
-      #    security create-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
-      #    security default-keychain -s build.keychain
-      #    security unlock-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
-      #    security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
-      #    security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $MACOS_KEYCHAIN_PASSWORD build.keychain
-      #    cd build
-      #    /usr/bin/codesign --force \ 
-      #                      --verify \
-      #                      --verbose \
-      #                      --timestamp \
-      #                      --options runtime \
-      #                      --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" \
-      #                      "Swiftray.app/Contents/MacOS/crashpad_handler"
-      #    /usr/bin/codesign --force \
-      #                      --deep \
-      #                      --verify \
-      #                      --verbose \
-      #                      --timestamp \
-      #                      --options runtime \
-      #                      --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" \
-      #                      --generate-entitlement-der \
-      #                      "Swiftray.app"
-
       - name: Notarize Release Build
         if: ${{ matrix.cfg.dist }}
         env: 
@@ -250,8 +218,12 @@ jobs:
         with:
           product-path: "build/Swiftray.app"
 
-      - name: Create dmg
+      - name: Create dmg and Sign the dmg
         if: ${{ matrix.cfg.dist }}
+        env: 
+          MACOS_CERTIFICATE: ${{ secrets.DEVELOPMENT_CERTIFICATE_DATA }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.DEVELOPMENT_CERTIFICATE_PASSPHRASE }}
+          MACOS_KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           brew install create-dmg
           cd build
@@ -263,11 +235,22 @@ jobs:
             --icon "Swiftray.app" 200 190 \
             --hide-extension "Swiftray.app" \
             --app-drop-link 600 190 \
-            "Swiftray-Installer.dmg" \
+            swiftray_installer.dmg \
             "Swiftray.app/"
-                
+          
+          tag_version = ${{  github.ref_name }}
+          tag_version = ${tag_version:1}} # strip the first char 'v'
+          echo ${tag_version}
+          
+          security unlock-keychain -p $MACOS_KEYCHAIN_PASSWORD build.keychain
+          /usr/bin/codesign --sign "Developer ID Application: FLUX TECHNOLOGY CORP. (4Y92JWKV94)" \
+                            --options runtime \
+                            --timestamp \
+                            --verbose \
+                            build/swiftray_installer.dmg
+
       - name: Create Github Release
         if: ${{ matrix.cfg.dist }} && startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: build/Swiftray-Installer.dmg
+          files: build/swiftray_installer.dmg
